@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl   Copyright (C) 2010-2013 Peter Breitenlohner <tex-live@tug.org>
+dnl   Copyright (C) 2010-2014 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
@@ -16,6 +16,10 @@ dnl Common code for all programs using libkpathsea.
 KPSE_COMMON([mendexk], [no-define])
 
 AC_CONFIG_HEADERS([c-auto.h:c-auto.in])
+
+m4_include([../../version.ac])[] dnl define tex_live_version
+AC_DEFINE([TL_VERSION], ["TeX Live tex_live_version()"],
+          [Define to the current TeX Live version string.])
 
 AC_CACHE_CHECK([if C99 variadic macros are supported],
                [kpse_cv_have___VA_ARGS__],
